:heavy_plus_sign: Precomits added / liniting commands

--- a/package.json
+++ b/package.json
@@ -5,6 +5,23 @@
     "hardhat": "^2.12.2"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.8.0"
+    "@openzeppelin/contracts": "^4.8.0",
+    "husky": "^8.0.2",
+    "prettier": "^2.7.1",
+    "prettier-plugin-solidity": "^1.0.0-rc.1",
+    "solc": "^0.8.17"
+  },
+  "scripts": {
+    "compile": "hardhat compile",
+    "test": "hardhat test",
+    "coverage": "hardhat coverage",
+    "lint": "prettier --write contracts/*",
+    "lint:check": "prettier --check contracts/**/*.sol",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "contracts/**/*.sol": [
+      "prettier --write"
+    ]
   }
 }
