--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.8.0",
+    "dotenv": "^16.0.3",
     "husky": "^8.0.2",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-rc.1",
