--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "hardhat-project",
+  "name": "erc223",
+  "version": "0.0.2",
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^2.0.0",
     "@nomiclabs/hardhat-ethers": "npm:hardhat-deploy-ethers@^0.3.0-beta.13",
